Navegação entre páginas

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,8 @@
             <ion-label stacked>Senha</ion-label>
             <ion-input type="password"></ion-input>
          </ion-item>
-        <button ion-button block>Entrar</button>
+         <!-- metodo login() definido no arquivo home.ts --->
+        <button ion-button block (click)="login()" >Entrar</button>
      </form>
      <button ion-button outline block>Registrar</button>
      
