--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -9,5 +9,15 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Página de categorias</p>
+  
+    <ion-list>
+        <!-- Itera a lista de "items" definida no arquivo "categoria.ts" -->
+        <button ion-item *ngFor="let item of items">  
+          <ion-thumbnail item-start>
+            <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+          </ion-thumbnail>
+          <h2>{{ item.nome }}</h2>
+        </button>
+      </ion-list>
+
 </ion-content>
