--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,16 +4,17 @@
     <img src="assets/imgs/tela-inicial.png" alt="logo">
      
      <form>
-       <ion-item>
+        <ion-item>
          <ion-label stacked>Email</ion-label>
-         <ion-input type="text" ></ion-input>
+         <!-- variavel "creds" definida no arquivo "home.ts" -->
+         <ion-input  [(ngModel)]="creds.email"  name="email"  type="text" ></ion-input>
         </ion-item> 
 
         <ion-item>
             <ion-label stacked>Senha</ion-label>
-            <ion-input type="password"></ion-input>
+            <ion-input [(ngModel)]="creds.senha"  name="senha" type="password"></ion-input>
          </ion-item>
-         <!-- metodo login() definido no arquivo home.ts --->
+         <!-- metodo "login()"" definido no arquivo "home.ts" --->
         <button ion-button block (click)="login()" >Entrar</button>
      </form>
      <button ion-button outline block>Registrar</button>
