--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,8 +15,8 @@
             <ion-input [(ngModel)]="creds.senha"  name="senha" type="password"></ion-input>
          </ion-item>
          <!-- metodo "login()"" definido no arquivo "home.ts" --->
-        <button ion-button block (click)="login()" >Entrar</button>
+        <button ion-button block (click)="login()">Entrar</button>
      </form>
-     <button ion-button outline block>Registrar</button>
+     <button ion-button outline block (click)="signup()">Registrar</button>
      
 </ion-content>
