--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -12,7 +12,7 @@
   
     <ion-list>
         <!-- Itera a lista de "items" definida no arquivo "categoria.ts" -->
-        <button ion-item *ngFor="let item of items">  
+        <button ion-item *ngFor="let item of items" (click)="showProdutos()">  
           <ion-thumbnail item-start>
             <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
           </ion-thumbnail>
