--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -12,11 +12,11 @@
   
     <ion-list>
         <!-- Itera a lista de "items" definida no arquivo "categoria.ts" -->
-        <button ion-item *ngFor="let item of items" (click)="showProdutos()">  
+        <button ion-item *ngFor="let categoria of items" (click)="showProdutos(categoria.id)">  
           <ion-thumbnail item-start>
-            <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+            <img src="{{bucketUrl}}/cat{{categoria.id}}.jpg">
           </ion-thumbnail>
-          <h2>{{ item.nome }}</h2>
+          <h2>{{ categoria.nome }}</h2>
         </button>
       </ion-list>
 
