--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
     <ion-list>
-        <button ion-item *ngFor="let produto of items" (click)='showDetail()'>
+        <button ion-item *ngFor="let produto of items" (click)='showDetail(produto.id)'>
           <ion-thumbnail item-start>
               <img [src]="produto.imageUrl || 'assets/imgs/prod.jpg'">
           </ion-thumbnail>
