--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -3,22 +3,22 @@
       <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
       </button>
-      <ion-title>ProdutoDetail</ion-title>
+      <ion-title>Produto</ion-title>
     </ion-navbar>
   </ion-header>
   
   <ion-content padding>
     <ion-card>
-      <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'"/>
+      <img [src]="produto?.imageUrl || 'assets/imgs/prod.jpg'"/>
       <ion-card-content>
         <ion-card-title>
-          {{item?.nome}}
+          {{produto?.nome}}
           </ion-card-title>
         <p>
-          {{item?.preco | currency}}
+          {{produto?.preco | currency}}
         </p>
       </ion-card-content>
     </ion-card>
   
-    <button ion-button block outline>Adicionar ao carrinho</button>
+    <button ion-button block outline (click)='addToCart(produto)' >Adicionar ao carrinho</button>
   </ion-content>
