--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -9,7 +9,11 @@
 </ion-header>
 
 <ion-content padding>
-  
+    <!-- botão flutuante do carrinho -->
+    <ion-fab  right edge>
+        <button navPush="CartPage" ion-fab mini class="carrinho-flutuante"><ion-icon name="cart"></ion-icon></button>
+    </ion-fab>   
+
     <ion-list>
         <!-- Itera a lista de "items" definida no arquivo "categoria.ts" -->
         <button ion-item *ngFor="let categoria of items" (click)="showProdutos(categoria.id)">  
