--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -8,6 +8,11 @@
   </ion-header>
   
   <ion-content padding>
+    <!-- botão flutuante do carrinho -->
+    <ion-fab  right edge>
+        <button navPush="CartPage" ion-fab mini class="carrinho-flutuante"><ion-icon name="cart"></ion-icon></button>
+    </ion-fab> 
+    
     <ion-card>
       <img [src]="produto?.imageUrl || 'assets/imgs/prod.jpg'"/>
       <ion-card-content>
