--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -10,7 +10,7 @@
           Selecione um endereço
         </ion-list-header>
         <button ion-item *ngFor="let endereco of items">
-          <h2>{{endereco.logradouro}}, {{endereco.numero}} </h2>
+          <h2>{{endereco.nome}}, {{endereco.numero}} </h2>
           <p>{{endereco.complemento}} {{endereco.bairro}} CEP {{endereco.cep}}</p>
           <p>{{endereco.cidade.nome}}, {{endereco.cidade.estado.nome}}</p>
         </button>
