--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -9,7 +9,7 @@
         <ion-list-header>
           Selecione um endereço
         </ion-list-header>
-        <button ion-item *ngFor="let endereco of items">
+        <button ion-item *ngFor="let endereco of items" (click)="nextPage(endereco)">
           <h2>{{endereco.nome}}, {{endereco.numero}} </h2>
           <p>{{endereco.complemento}} {{endereco.bairro}} CEP {{endereco.cep}}</p>
           <p>{{endereco.cidade.nome}}, {{endereco.cidade.estado.nome}}</p>
