--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,7 +23,8 @@
       <img [src]="picture">
     </ion-item>
     <ion-item>
-      <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
+      <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button> 
+      <button ion-button block (click)="getGalerryPicture()" [disabled]="cameraOn">Galeria</button> 
       <button *ngIf="picture" ion-button outline block (click)="sendPicture()">Enviar imagem</button>
       <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
